@@ -1,4 +1,4 @@
-package one;
+package twp;
 
 public class Game {
     LogIn login = new LogIn();
@@ -13,6 +13,7 @@ public class Game {
     private Room targetRoom;
     private long timeReward;
 
+
     public Game(){
         map = new Map();
         map.buildMap();
@@ -20,7 +21,7 @@ public class Game {
         Room startRoom = map.getStartRoom();
         Room missionRoom = map.fetchMissionRoom();
         targetRoom = missionRoom;
-        quest = new Quest("Nå til rummet","Gå til det korrekte rum på anden sal, for at gennemføre quest'en");
+
         time = new Timer();
         player.setCurrentRoom(map.getStartRoom());
 
@@ -66,13 +67,45 @@ public class Game {
                     db.saveHighscore(login.getName(),time.getSeconds());
                     break;
                 case "gå":
-                    Direction direction = parseCommand(commandString[1]);
-                    goCommand(direction);
-                    if(getCurrentRoom().getCreatures().size()>0){
-                        getCurrentRoom().getCreatures().get(0).displayCreature();
-                        getCurrentRoom().getCreatures().get(0).displayActionOptions();
-                        getCurrentRoom().getCreatures().get(0).proccessAndRewardAction();
+                    if(!getCurrentRoom().getIsLocked()){
+                        Direction direction = parseCommand(commandString[1]);
+                        goCommand(direction);
+                        if(!getCurrentRoom().getCreatures().isEmpty()){
+                            getCurrentRoom().getCreatures().getFirst().displayCreature();
+                            getCurrentRoom().getCreatures().getFirst().displayActionOptions();
+                            getCurrentRoom().getCreatures().getFirst().proccessAndRewardAction();
+                            if(player.getHealth()<1){
+                                runningGame=false;
+                                ui.displayMessage("Du blev ramt af"+getCurrentRoom().getCreatures().getFirst().getCreatureName()+" og led en grusom død");
+                            }
+                        }
+                        if(getCurrentRoom().getRiddle() != null){
+                            boolean answerBool = getCurrentRoom().getRiddle().displayRiddle();
+                            if (answerBool){
+                                ui.displayMessage("Du har tændt et lys du er oppe på: "+ Riddle.getRiddleSolvedCounter() +"/7");
+                            }
+                        }
+                        if(Riddle.getRiddleSolvedCounter()==7){
+                            ui.displayMessage("Du har nu adgang til det sidste rum");
+                            map.getFinalLockedRoom().setIsLockedFalse();
+                        }
+                    } else if(getCurrentRoom() == map.getFinalLockedRoom()){
+                        runningGame = false;
+                        ui.displayMessage("Du tænder den sidste flamme. Et øjeblik sker der ingenting.\n" +
+                                "Så begynder katedralen at vibrere svagt, som om selve stenene trækker vejret. De seks flammer løfter sig – en efter en – fra deres fade og svæver op mod kuplen højt over dig. Du hører stemmen igen. Ikke én, men mange, hviskende i stjernernes sprog.\n" +
+                                "“Syv flammer. Syv prøver. Én vilje.”\n" +
+                                "Midt i rummet åbner gulvet sig, men ikke med larm – det glider væk som tåge. En trappe i stjernesten viser sig. Du går ned. Under katedralen er der ikke mørke – men lys. Et rum bygget af tid og tanke, hvor stjernekortet over hele universet er ætset i væggene.\n" +
+                                "I midten: En skikkelse. Hætteklædt. Ubevægelig.\n" +
+                                "“Du har bragt os tilbage.”\n" +
+                                "Skikkelsen hæver hovedet. Det er dig selv.\n" +
+                                "Men ældre. Eller yngre. Eller uden alder. En version af dig, du kunne være blevet. Eller måske allerede er.\n" +
+                                "“Vi ventede. Og du tændte lyset igen. Nu kan stierne åbnes – ikke kun i denne katedral, men i hele himlens labyrint.”\n" +
+                                "Du rækker hånden ud. Skikkelsen rører ved dig\n + " +
+                                "Katedralen begynder at løfte sig. Ikke styrte sammen – men stige. Du står i centrum, mens hele rummet bliver til himmel.");
+                        time.showTime(startTime - timeReward);
+                        db.saveHighscore(login.getName(),time.getSeconds());
                     }
+
                     break;
                 case "tag":
                     if (player.getItem(secondWord)) {
@@ -81,10 +114,13 @@ public class Game {
                         gui.printMessage("There is nothing like " + secondWord + " to take around here.");
                     }
                     break;
+                case "use":
+                    player.useItem();
                 default:
                     gui.printMessage("Jeg forstår ikke kommandoen");
 
             }
+
         }
     }
 
@@ -136,6 +172,9 @@ public class Game {
     }
     public Player getPlayer() {
         return player;
+    }
+    public void setCurrentQuest(Quest quest){
+        this.quest = quest;
     }
 
 }
